# two_training_toolset

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  noxfile.py  pyproject.toml  requirements.txt  run_training_workflow.py  validation_requirements.txt
.github/scripts/: check_format.sh  run_format.sh  security.sh
.github/workflows/: code-security.yaml  code-testing.yaml  code-validation.yaml
artifacts/: metadata.json  model-v1.0.0.joblib
src/serve/: app.py  config.yaml
src/serve/api_utils/: authentication.py  base_app.py  config.py  schemas.py
src/training/: config.yaml  train.py  training_workflow.py
src/training/workflow_classes/: __init__.py  iris_classifier.py  registry.py  workflow_tempalate.py
tests/integration_tests/: test_api.py
tests/unit_tests/: conftest.py
tests/unit_tests/serve/: test_api.py
tests/unit_tests/training/workflow_classes/: test_iris_classifier.py
